--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ footer ul {
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16); }
 
-main {
+#main-home {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
@@ -79,71 +79,144 @@ main {
   padding-bottom: 32px;
   /* OPENS TITLE-CONTAINER */
   /* CLOSES TITLE-CONTAINER */ }
-  main h2 {
+  #main-home h2 {
     grid-column: 1 / 5;
     grid-row: 1;
     margin-top: 32px; }
-  main .item-container-1 {
+  #main-home .item-container-1 {
     grid-column: 1 / 5;
     position: relative;
     background-color: grey;
     display: grid; }
-  main img {
+  #main-home img {
     width: 100%;
     height: auto;
     z-index: 0; }
-  main .title-container {
+  #main-home .title-container {
     height: 100%;
     width: 100%;
     background-color: black;
     position: absolute;
     opacity: 0;
     z-index: -10; }
-    main .title-container a {
+    #main-home .title-container a {
       height: 100%;
       width: 100%;
       position: absolute;
       z-index: 1 !important; }
-    main .title-container h2 {
+    #main-home .title-container h2 {
       color: white;
       text-align: center;
       margin-top: 38%;
       font-size: 1.75em; }
-    main .title-container h3 {
+    #main-home .title-container h3 {
       color: white;
       text-align: center;
       font-size: 1.25em; }
-  main .item-container-2 {
+  #main-home .item-container-2 {
     grid-column: 1 / 3;
     position: relative; }
-  main .item-container-3 {
+  #main-home .item-container-3 {
     grid-column: 3 / 5;
     position: relative; }
-  main .item-container-4 {
+  #main-home .item-container-4 {
     grid-column: 1 / 5;
     position: relative; }
-  main .item-container-5 {
+  #main-home .item-container-5 {
     grid-column: 1 / 3;
     position: relative; }
-  main .item-container-6 {
+  #main-home .item-container-6 {
     grid-column: 3 / 5;
     position: relative; }
-  main .item-container-7 {
+  #main-home .item-container-7 {
     grid-column: 1 / 5;
     position: relative; }
-  main .item-container-8 {
+  #main-home .item-container-8 {
     grid-column: 1 / 3;
     position: relative; }
-  main .item-container-9 {
+  #main-home .item-container-9 {
     grid-column: 3 / 5;
     position: relative; }
-  main div {
+  #main-home div {
     transition: .4s ease; }
-  main div:hover .title-container {
+  #main-home div:hover .title-container {
     opacity: 1;
     z-index: 10; }
 
-/* CLOSES MAIN */
+/* CLOSES MAIN-HOME */
+#main-catalog {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto;
+  grid-gap: .5em;
+  display: grid;
+  padding-bottom: 32px;
+  /* OPENS TITLE-CONTAINER */
+  /* CLOSES TITLE-CONTAINER */ }
+  #main-catalog h2 {
+    grid-column: 1 / 5;
+    grid-row: 1;
+    margin-top: 32px; }
+  #main-catalog .item-container-1 {
+    grid-column: 1 / 3;
+    position: relative;
+    background-color: grey;
+    display: grid; }
+  #main-catalog img {
+    width: 100%;
+    height: auto;
+    z-index: 0; }
+  #main-catalog .title-container {
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    opacity: 0;
+    z-index: -10; }
+    #main-catalog .title-container a {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: 1 !important; }
+    #main-catalog .title-container h2 {
+      color: white;
+      text-align: center;
+      margin-top: 38%;
+      font-size: 1.75em; }
+    #main-catalog .title-container h3 {
+      color: white;
+      text-align: center;
+      font-size: 1.25em; }
+  #main-catalog .item-container-2 {
+    grid-column: 3 / 5;
+    position: relative; }
+  #main-catalog .item-container-3 {
+    grid-column: 1 / 3;
+    position: relative; }
+  #main-catalog .item-container-4 {
+    grid-column: 3 / 5;
+    position: relative; }
+  #main-catalog .item-container-5 {
+    grid-column: 1 / 3;
+    position: relative; }
+  #main-catalog .item-container-6 {
+    grid-column: 3 / 5;
+    position: relative; }
+  #main-catalog .item-container-7 {
+    grid-column: 1 / 3;
+    position: relative; }
+  #main-catalog .item-container-8 {
+    grid-column: 3 / 5;
+    position: relative; }
+  #main-catalog .item-container-9 {
+    grid-column: 1 / 3;
+    position: relative; }
+  #main-catalog div {
+    transition: .4s ease; }
+  #main-catalog div:hover .title-container {
+    opacity: 1;
+    z-index: 10; }
+
+/* CLOSES MAIN-CATALOG */
 .featured-blogs-container {
   padding: 0; }
 
@@ -205,8 +278,10 @@ main {
       font-size: 1.25em; }
 
 /* MODAL */
-#modal img {
-  padding: 4px; }
+#modal {
+  margin-top: 15px; }
+  #modal img {
+    padding: 4px; }
 
 @media (min-width: 567px) {
   .container-fluid {
@@ -235,10 +310,10 @@ main {
       grid-row: 2/3 !important;
       position: relative; }
 
-  main {
+  #main-home {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
-    main h2 {
+    #main-home h2 {
       grid-column: 1 / 7;
       grid-row: 1 !important; }
 
@@ -312,10 +387,10 @@ main {
   .main-container {
     padding-right: 1em !important; }
 
-  main {
+  #main-home {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
-    main h2 {
+    #main-home h2 {
       grid-column: 1 / 5;
       grid-row: 1 !important; }
 
