--- a/css/style.scss
+++ b/css/style.scss
@@ -99,7 +99,7 @@ footer{
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
 }
 
-main{
+#main-home{
 
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
@@ -215,7 +215,127 @@ div:hover{
 
   }
 }
-} /* CLOSES MAIN */
+} /* CLOSES MAIN-HOME */
+
+
+
+#main-catalog{
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto;
+  grid-gap: .5em;
+  display: grid;
+  padding-bottom: 32px;
+
+  h2{
+    grid-column: 1 / 5;
+    grid-row: 1;
+    margin-top: 32px;
+  }
+
+  .item-container-1{
+    grid-column: 1 / 3;
+
+    position: relative;
+    background-color: grey;
+    display: grid;
+  }
+  img{
+    width: 100%;
+    height: auto;
+    z-index: 0;
+  }
+
+
+  /* OPENS TITLE-CONTAINER */
+  .title-container{
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    opacity: 0;
+    z-index: -10;
+
+    a{
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: 1!important;
+    }
+
+    h2{
+      color: white;
+      text-align: center;
+      margin-top: 38%;
+      font-size: 1.75em;
+    }
+    h3{
+      color: white;
+      text-align: center;
+      font-size: 1.25em;
+    }
+  } /* CLOSES TITLE-CONTAINER */
+
+  .item-container-2{
+    grid-column: 3 / 5;
+    position: relative;
+  }
+
+  .item-container-3{
+    grid-column: 1 / 3;
+    position: relative;
+  }
+
+  .item-container-4{
+    grid-column: 3 / 5;
+    position: relative;
+  }
+
+  .item-container-5{
+    grid-column: 1 / 3;
+    position: relative;
+
+  }
+
+  .item-container-6{
+    grid-column: 3 / 5;
+    position: relative;
+  }
+
+  .item-container-7{
+    grid-column: 1 / 3;
+    position: relative;
+
+  }
+
+  .item-container-8{
+    grid-column: 3 / 5;
+    position: relative;
+
+  }
+
+  .item-container-9{
+    grid-column: 1 / 3;
+    position: relative;
+
+  }
+
+
+div{
+  transition: .4s ease;
+
+}
+div:hover{
+  h2{
+
+  }
+  .title-container{
+    opacity: 1;
+    z-index: 10;
+
+  }
+}
+} /* CLOSES MAIN-CATALOG */
 
 .featured-blogs-container{
 padding: 0;
@@ -310,6 +430,7 @@ h2{
   img{
     padding: 4px;
   }
+  margin-top: 15px;
 }
 
 @media(min-width: 567px){
@@ -350,7 +471,7 @@ h2{
 }
 
 
-main{
+#main-home{
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
 
@@ -462,7 +583,7 @@ nav{
   padding-right: 1em!important;
 }
 
-main{
+#main-home{
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
 
