--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ footer ul {
 
 /* CLOSES MAIN-HOME */
 #main-catalog {
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr !important;
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
@@ -153,14 +153,11 @@ footer ul {
   /* OPENS TITLE-CONTAINER */
   /* CLOSES TITLE-CONTAINER */ }
   #main-catalog h2 {
-    grid-column: 1 / 5;
-    grid-row: 1;
+    grid-column: 1/5 !important;
     margin-top: 32px; }
   #main-catalog .item-container-1 {
-    grid-column: 1 / 3;
-    position: relative;
-    background-color: grey;
-    display: grid; }
+    grid-column: 1/3 !important;
+    position: relative; }
   #main-catalog img {
     width: 100%;
     height: auto;
@@ -187,28 +184,37 @@ footer ul {
       text-align: center;
       font-size: 1.25em; }
   #main-catalog .item-container-2 {
-    grid-column: 3 / 5;
+    grid-column: 3/5 !important;
     position: relative; }
   #main-catalog .item-container-3 {
-    grid-column: 1 / 3;
+    grid-column: 1/3 !important;
     position: relative; }
   #main-catalog .item-container-4 {
-    grid-column: 3 / 5;
+    grid-column: 3/5 !important;
     position: relative; }
   #main-catalog .item-container-5 {
-    grid-column: 1 / 3;
+    grid-column: 1/3 !important;
     position: relative; }
   #main-catalog .item-container-6 {
-    grid-column: 3 / 5;
+    grid-column: 3/5 !important;
     position: relative; }
   #main-catalog .item-container-7 {
-    grid-column: 1 / 3;
+    grid-column: 1/3 !important;
     position: relative; }
   #main-catalog .item-container-8 {
-    grid-column: 3 / 5;
+    grid-column: 3/5 !important;
     position: relative; }
   #main-catalog .item-container-9 {
-    grid-column: 1 / 3;
+    grid-column: 1/3 !important;
+    position: relative; }
+  #main-catalog .item-container-10 {
+    grid-column: 3 / 5 !important;
+    position: relative; }
+  #main-catalog .item-container-11 {
+    grid-column: 1 / 3 !important;
+    position: relative; }
+  #main-catalog .item-container-12 {
+    grid-column: 3 / 5 !important;
     position: relative; }
   #main-catalog div {
     transition: .4s ease; }
@@ -316,45 +322,36 @@ footer ul {
     #main-home h2 {
       grid-column: 1 / 7;
       grid-row: 1 !important; }
-
-  .item-container-1 {
-    grid-column: 1/5 !important;
-    grid-row: 2/4 !important;
-    position: relative; }
-
-  .item-container-2 {
-    grid-column: 5/7 !important;
-    position: relative; }
-
-  .item-container-3 {
-    grid-column: 5/7 !important;
-    position: relative; }
-
-  .item-container-4 {
-    grid-column: 1 / 5 !important;
-    grid-row: 4 / 6;
-    position: relative; }
-
-  .item-container-5 {
-    grid-column: 5/7 !important;
-    position: relative; }
-
-  .item-container-6 {
-    grid-column: 5/7 !important;
-    position: relative; }
-
-  .item-container-7 {
-    grid-column: 1/5 !important;
-    grid-row: 6/8 !important;
-    position: relative; }
-
-  .item-container-8 {
-    grid-column: 5/7 !important;
-    position: relative; }
-
-  .item-container-9 {
-    grid-column: 5/7 !important;
-    position: relative; } }
+    #main-home .item-container-1 {
+      grid-column: 1/5 !important;
+      grid-row: 2/4 !important;
+      position: relative; }
+    #main-home .item-container-2 {
+      grid-column: 5/7 !important;
+      position: relative; }
+    #main-home .item-container-3 {
+      grid-column: 5/7 !important;
+      position: relative; }
+    #main-home .item-container-4 {
+      grid-column: 1 / 5 !important;
+      grid-row: 4 / 6;
+      position: relative; }
+    #main-home .item-container-5 {
+      grid-column: 5/7 !important;
+      position: relative; }
+    #main-home .item-container-6 {
+      grid-column: 5/7 !important;
+      position: relative; }
+    #main-home .item-container-7 {
+      grid-column: 1/5 !important;
+      grid-row: 6/8 !important;
+      position: relative; }
+    #main-home .item-container-8 {
+      grid-column: 5/7 !important;
+      position: relative; }
+    #main-home .item-container-9 {
+      grid-column: 5/7 !important;
+      position: relative; } }
 @media (min-width: 992px) {
   #modal {
     min-width: 81.5vw !important;
@@ -393,38 +390,106 @@ footer ul {
     #main-home h2 {
       grid-column: 1 / 5;
       grid-row: 1 !important; }
+    #main-home .item-container-1 {
+      grid-column: 1/3 !important;
+      grid-row: 2/4 !important;
+      position: relative; }
+    #main-home .item-container-2 {
+      grid-column: 3/4 !important;
+      grid-row: 2/3 !important;
+      position: relative; }
+    #main-home .item-container-3 {
+      grid-column: 4/5 !important;
+      grid-row: 2/3 !important;
+      position: relative; }
+    #main-home .item-container-4 {
+      grid-column: 3 / 4 !important;
+      grid-row: 3/4 !important;
+      position: relative; }
+    #main-home .item-container-5 {
+      grid-column: 4/5 !important;
+      grid-row: 3/4 !important;
+      position: relative; }
+    #main-home .item-container-6 {
+      grid-column: 1/2 !important;
+      position: relative;
+      display: none; }
+
+  #main-catalog {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto auto;
+    grid-gap: .5em;
+    display: grid;
+    padding-bottom: 32px;
+    /* OPENS TITLE-CONTAINER */
+    /* CLOSES TITLE-CONTAINER */ }
+    #main-catalog h2 {
+      grid-column: 1 / 5;
+      grid-row: 1;
+      margin-top: 32px; }
+    #main-catalog img {
+      width: 100%;
+      height: auto;
+      z-index: 0; }
+    #main-catalog .title-container {
+      height: 100%;
+      width: 100%;
+      background-color: black;
+      position: absolute;
+      opacity: 0;
+      z-index: -10; }
+      #main-catalog .title-container a {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        z-index: 1 !important; }
+      #main-catalog .title-container h2 {
+        color: white;
+        text-align: center;
+        margin-top: 38%;
+        font-size: 1.75em; }
+      #main-catalog .title-container h3 {
+        color: white;
+        text-align: center;
+        font-size: 1.25em; }
+    #main-catalog .item-container-1 {
+      grid-column: 1 / 2 !important;
+      position: relative; }
+    #main-catalog .item-container-2 {
+      grid-column: 2 / 3 !important;
+      position: relative; }
+    #main-catalog .item-container-3 {
+      grid-column: 3 / 4 !important;
+      position: relative; }
+    #main-catalog .item-container-4 {
+      grid-column: 4 / 5 !important;
+      position: relative; }
+    #main-catalog .item-container-5 {
+      grid-column: 1 / 2 !important;
+      position: relative; }
+    #main-catalog .item-container-6 {
+      grid-column: 2 / 3 !important;
+      position: relative; }
+    #main-catalog .item-container-7 {
+      grid-column: 3 / 4 !important;
+      position: relative; }
+    #main-catalog .item-container-8 {
+      grid-column: 4 / 5 !important;
+      position: relative; }
+    #main-catalog .item-container-9 {
+      grid-column: 1 / 2 !important;
+      position: relative; }
+    #main-catalog .item-container-10 {
+      grid-column: 2 / 3 !important;
+      position: relative; }
+    #main-catalog .item-container-11 {
+      grid-column: 3 / 4 !important;
+      position: relative; }
+    #main-catalog .item-container-12 {
+      grid-column: 4 / 5 !important;
+      position: relative; }
 
   footer {
-    display: none; }
-
-  .item-container-1 {
-    grid-column: 1/3 !important;
-    grid-row: 2/4 !important;
-    position: relative; }
-
-  .item-container-2 {
-    grid-column: 3/4 !important;
-    grid-row: 2/3 !important;
-    position: relative; }
-
-  .item-container-3 {
-    grid-column: 4/5 !important;
-    grid-row: 2/3 !important;
-    position: relative; }
-
-  .item-container-4 {
-    grid-column: 3 / 4 !important;
-    grid-row: 3/4 !important;
-    position: relative; }
-
-  .item-container-5 {
-    grid-column: 4/5 !important;
-    grid-row: 3/4 !important;
-    position: relative; }
-
-  .item-container-6 {
-    grid-column: 1/2 !important;
-    position: relative;
     display: none; } }
 
 /*# sourceMappingURL=style.css.map */
