--- a/css/style.scss
+++ b/css/style.scss
@@ -221,24 +221,21 @@ div:hover{
 
 #main-catalog{
 
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr!important;
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
   display: grid;
   padding-bottom: 32px;
 
   h2{
-    grid-column: 1 / 5;
-    grid-row: 1;
+    grid-column: 1 / 5!important;
+
     margin-top: 32px;
   }
 
   .item-container-1{
-    grid-column: 1 / 3;
-
+    grid-column: 1 / 3!important;
     position: relative;
-    background-color: grey;
-    display: grid;
   }
   img{
     width: 100%;
@@ -276,48 +273,64 @@ div:hover{
     }
   } /* CLOSES TITLE-CONTAINER */
 
+
   .item-container-2{
-    grid-column: 3 / 5;
+    grid-column: 3 / 5!important;
     position: relative;
   }
 
   .item-container-3{
-    grid-column: 1 / 3;
+    grid-column: 1 / 3!important;
     position: relative;
   }
 
   .item-container-4{
-    grid-column: 3 / 5;
+    grid-column: 3 / 5!important;
     position: relative;
   }
 
   .item-container-5{
-    grid-column: 1 / 3;
+    grid-column: 1 / 3!important;
     position: relative;
 
   }
 
   .item-container-6{
-    grid-column: 3 / 5;
+    grid-column: 3 / 5!important;
     position: relative;
   }
 
   .item-container-7{
-    grid-column: 1 / 3;
+    grid-column: 1 / 3!important;
     position: relative;
 
   }
 
   .item-container-8{
-    grid-column: 3 / 5;
+    grid-column: 3 / 5!important;
     position: relative;
 
   }
 
   .item-container-9{
-    grid-column: 1 / 3;
+    grid-column: 1 / 3!important;
     position: relative;
 
+  }
+
+  .item-container-10{
+    grid-column: 3 / 5 !important;
+    position: relative;
+  }
+
+  .item-container-11{
+    grid-column: 1 / 3 !important;
+    position: relative;
+  }
+
+  .item-container-12{
+    grid-column: 3 / 5 !important;
+    position: relative;
   }
 
 
@@ -479,7 +492,7 @@ h2{
     grid-column: 1 / 7;
     grid-row: 1!important;
   }
-}
+
   .item-container-1{
     grid-column: 1 / 5!important;
     grid-row: 2 / 4!important;
@@ -531,6 +544,7 @@ h2{
     position: relative;
 
   }
+}
 }
 
 
@@ -591,11 +605,7 @@ nav{
     grid-column: 1 / 5;
     grid-row: 1!important;
   }
-}
 
-footer{
-  display: none;
-}
   .item-container-1{
     grid-column: 1 / 3!important;
     grid-row: 2 / 4!important;
@@ -632,6 +642,131 @@ footer{
     position: relative;
     display: none;
   }
+}
+
+
+
+
+#main-catalog{
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto;
+  grid-gap: .5em;
+  display: grid;
+  padding-bottom: 32px;
+
+  h2{
+    grid-column: 1 / 5;
+    grid-row: 1;
+    margin-top: 32px;
+  }
+
+  img{
+    width: 100%;
+    height: auto;
+    z-index: 0;
+  }
+
+
+  /* OPENS TITLE-CONTAINER */
+  .title-container{
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    opacity: 0;
+    z-index: -10;
+
+    a{
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: 1!important;
+    }
+
+    h2{
+      color: white;
+      text-align: center;
+      margin-top: 38%;
+      font-size: 1.75em;
+    }
+    h3{
+      color: white;
+      text-align: center;
+      font-size: 1.25em;
+    }
+  } /* CLOSES TITLE-CONTAINER */
+
+  .item-container-1{
+    grid-column: 1 / 2 !important;
+    position: relative;
+
+  }
+
+  .item-container-2{
+    grid-column: 2 / 3 !important;
+    position: relative;
+  }
+
+  .item-container-3{
+    grid-column: 3 / 4 !important;
+    position: relative;
+  }
+
+  .item-container-4{
+    grid-column: 4 / 5 !important;
+    position: relative;
+  }
+
+  .item-container-5{
+    grid-column: 1 / 2 !important;
+    position: relative;
+
+  }
+
+  .item-container-6{
+    grid-column: 2 / 3 !important;
+    position: relative;
+  }
+
+  .item-container-7{
+    grid-column: 3 / 4 !important;
+    position: relative;
+
+  }
+
+  .item-container-8{
+    grid-column: 4 / 5 !important;
+    position: relative;
+
+  }
+
+  .item-container-9{
+    grid-column: 1 / 2 !important;
+    position: relative;
+
+  }
+
+  .item-container-10{
+    grid-column: 2 / 3 !important;
+    position: relative;
+  }
+
+  .item-container-11{
+    grid-column: 3 / 4 !important;
+    position: relative;
+  }
+
+  .item-container-12{
+    grid-column: 4 / 5 !important;
+    position: relative;
+  }
+}
+
+
+footer{
+  display: none;
+}
 
 
 }
