--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #F2F2F2; }
-
 h1, h2 {
   font-family: acherus_grotesquebold;
   font-size: 1.5em;
@@ -13,26 +10,24 @@ h3, h4 {
 p {
   font-family: acherus_grotesque_regularRg; }
 
-nav {
-  padding: 16px;
-  margin: 0; }
-  nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0; }
-    nav ul li {
-      float: left; }
-      nav ul li a {
-        color: black;
-        font-family: acherus_grotesquelight;
-        font-size: 1.1em;
-        transition: ease .4s; }
-      nav ul li a:hover {
-        text-decoration: none;
-        opacity: .5;
-        color: black; }
-  nav .social-media-xl {
-    display: none; }
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 16px;
+  margin-bottom: 16px; }
+  nav ul li {
+    float: left; }
+    nav ul li a {
+      color: black;
+      font-family: acherus_grotesquelight;
+      font-size: 1.1em;
+      transition: ease .4s; }
+    nav ul li a:hover {
+      text-decoration: none;
+      opacity: .5;
+      color: black; }
+nav .social-media-xl {
+  display: none; }
 
 #active {
   font-family: acherus_grotesquebold; }
@@ -47,8 +42,8 @@ nav {
   margin-top: 16px; }
 
 .container-fluid {
-  padding-right: 0;
-  padding-left: 0; }
+  padding-right: 0 !important;
+  padding-left: 0 !important; }
 
 article {
   background-color: white;
@@ -73,9 +68,12 @@ footer ul {
   margin-top: 10px;
   margin-bottom: 10px;
   background-color: white;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16); }
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.16);
+  padding: 0 !important;
+  overflow: hidden; }
 
-#main-home {
+.main-home {
+  max-width: 100%;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
@@ -83,67 +81,66 @@ footer ul {
   padding-bottom: 32px;
   /* OPENS TITLE-CONTAINER */
   /* CLOSES TITLE-CONTAINER */ }
-  #main-home h2 {
-    grid-column: 1 / 5;
+  .main-home h2 {
+    grid-column: 1/5 !important;
     grid-row: 1;
     margin-top: 32px; }
-  #main-home .item-container-1 {
+  .main-home .item-container-1 {
     grid-column: 1 / 5;
     position: relative;
-    background-color: grey;
-    display: grid; }
-  #main-home img {
+    background-color: grey; }
+  .main-home img {
     width: 100%;
     height: auto;
     z-index: 0; }
-  #main-home .title-container {
+  .main-home .title-container {
     height: 100%;
     width: 100%;
     background-color: black;
     position: absolute;
     opacity: 0;
     z-index: -10; }
-    #main-home .title-container a {
+    .main-home .title-container a {
       height: 100%;
       width: 100%;
       position: absolute;
       z-index: 1 !important; }
-    #main-home .title-container h2 {
+    .main-home .title-container h2 {
       color: white;
       text-align: center;
       margin-top: 38%;
       font-size: 1.75em; }
-    #main-home .title-container h3 {
+    .main-home .title-container h3 {
       color: white;
       text-align: center;
       font-size: 1.25em; }
-  #main-home .item-container-2 {
+  .main-home .item-container-2 {
     grid-column: 1 / 3;
     position: relative; }
-  #main-home .item-container-3 {
+  .main-home .item-container-3 {
     grid-column: 3 / 5;
     position: relative; }
-  #main-home .item-container-4 {
+  .main-home .item-container-4 {
     grid-column: 1 / 5;
     position: relative; }
-  #main-home .item-container-5 {
+  .main-home .item-container-5 {
     grid-column: 1 / 3;
     position: relative; }
-  #main-home .item-container-6 {
+  .main-home .item-container-6 {
     grid-column: 3 / 5;
     position: relative; }
-  #main-home .item-container-7 {
+  .main-home .item-container-7 {
     grid-column: 1 / 5;
     position: relative; }
-  #main-home .item-container-8 {
+  .main-home .item-container-8 {
     grid-column: 1 / 3;
     position: relative; }
-  #main-home .item-container-9 {
+  .main-home .item-container-9 {
     grid-column: 3 / 5;
     position: relative; }
-  #main-home div {
+  .main-home div {
     transition: .4s ease; }
-  #main-home div:hover .title-container {
+  .main-home div:hover .title-container {
     opacity: 1;
     z-index: 10; }
 
@@ -344,8 +341,8 @@ footer ul {
 
 @media (min-width: 567px) {
   .container-fluid {
-    padding-right: 10px;
-    padding-left: 10px; }
+    padding-right: 10px !important;
+    padding-left: 10px !important; }
 
   #featured-blogs {
     grid-template-rows: auto 1fr !important; }
@@ -406,11 +403,6 @@ footer ul {
       grid-column: 5/7 !important;
       position: relative; } }
 @media (min-width: 992px) {
-  #modal {
-    min-width: 81.5vw !important;
-    margin-left: 17.5vw;
-    border-radius: 0px !important; }
-
   .logo-container {
     margin-top: 26px;
     margin-bottom: 75px;
@@ -437,33 +429,33 @@ footer ul {
   .main-container {
     padding-right: 1em !important; }
 
-  #main-home {
+  .main-home {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto auto auto; }
-    #main-home h2 {
+    .main-home h2 {
       grid-column: 1 / 5;
       grid-row: 1 !important; }
-    #main-home .item-container-1 {
+    .main-home .item-container-1 {
       grid-column: 1/3 !important;
       grid-row: 2/4 !important;
       position: relative; }
-    #main-home .item-container-2 {
+    .main-home .item-container-2 {
       grid-column: 3/4 !important;
       grid-row: 2/3 !important;
       position: relative; }
-    #main-home .item-container-3 {
+    .main-home .item-container-3 {
       grid-column: 4/5 !important;
       grid-row: 2/3 !important;
       position: relative; }
-    #main-home .item-container-4 {
+    .main-home .item-container-4 {
       grid-column: 3 / 4 !important;
       grid-row: 3/4 !important;
       position: relative; }
-    #main-home .item-container-5 {
+    .main-home .item-container-5 {
       grid-column: 4/5 !important;
       grid-row: 3/4 !important;
       position: relative; }
-    #main-home .item-container-6 {
+    .main-home .item-container-6 {
       grid-column: 1/2 !important;
       position: relative;
       display: none; }
