--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,5 @@
 $light-grey: #F2F2F2;
 
-body{
-  background-color: $light-grey;
-}
 
 h1, h2{
   font-family: acherus_grotesquebold;
@@ -20,12 +17,12 @@ p{
 }
 
 nav{
-  padding: 16px;
-  margin: 0;
+
   ul{
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin-top: 16px;
+    margin-bottom: 16px;
     li{
       float: left;
       a{
@@ -66,13 +63,14 @@ nav{
 
 
 .container-fluid{
-  padding-right: 0;
-  padding-left: 0;
+  padding-right: 0!important;
+  padding-left: 0!important;
 }
 
 article{
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
+
 
   h1{
     margin-top: 32px;
@@ -103,11 +101,14 @@ footer{
   margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, .16);
+  padding: 0!important;
+  overflow: hidden;
+
 
 }
 
-#main-home{
-
+.main-home{
+max-width: 100%;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
   grid-gap: .5em;
@@ -115,17 +116,15 @@ footer{
   padding-bottom: 32px;
 
   h2{
-    grid-column: 1 / 5;
+    grid-column: 1 / 5!important;
     grid-row: 1;
     margin-top: 32px;
   }
 
   .item-container-1{
     grid-column: 1 / 5;
-
     position: relative;
     background-color: grey;
-    display: grid;
   }
   img{
     width: 100%;
@@ -243,13 +242,16 @@ h1{
     list-style: none;
     margin-left: 0;
     padding: 0;
+
     li{
       float: left;
       margin-right: 5vw;
+
       a{
         color: black;
         transition: ease .4s;
       }
+
       a:hover{
         text-decoration: none;
         opacity: .5;
@@ -262,6 +264,7 @@ h1{
     grid-column: 1 / 3!important;
     position: relative;
   }
+
   img{
     width: 100%;
     height: auto;
@@ -388,6 +391,7 @@ padding: 32px;
   grid-template-rows: auto 1fr 1fr;
   display: grid;
   grid-gap: .5em;
+
 
 /* OPENS ITEM CONTAINERS */
 
@@ -529,8 +533,8 @@ textarea{
 @media(min-width: 567px){
 
   .container-fluid{
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 10px!important;
+    padding-left: 10px!important;
   }
 
 #featured-blogs{
@@ -635,11 +639,6 @@ textarea{
 
 @media(min-width: 992px){
 
-#modal{
-  min-width: 81.5vw!important;
-  margin-left: 17.5vw;
-  border-radius: 0px!important;
-}
 
     .logo-container{
       margin-top: 26px;
@@ -677,7 +676,7 @@ nav{
   padding-right: 1em!important;
 }
 
-#main-home{
+.main-home{
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
 
